err/python-ldraw.err
Listing '.'...
Listing './bin'...
Compiling './bin/ldr2pov.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ldraw'...
Compiling './lib/python3.5/site-packages/ldraw/figure.py'...
***   File "./lib/python3.5/site-packages/ldraw/figure.py", line 250
    print figure.head(Yellow)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ldraw/geometry.py'...
***   File "./lib/python3.5/site-packages/ldraw/geometry.py", line 135
    raise MatrixError, "Invalid axis specified."
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ldraw/parts.py'...
***   File "./lib/python3.5/site-packages/ldraw/parts.py", line 123
    raise PartError, "Failed to load parts file: %s" % path
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ldraw/writers'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_ldraw-0.26.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
